crates/carta/tests/snapshots/golden_writer__html4__figure__figure-captioned.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<div class="float">
<img src="pic.png" title="fig title" alt="a caption" />
<div class="figcaption">a caption</div>
</div>
