crates/carta/tests/snapshots/golden_writer__html4__figure__figure-with-dims.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<div class="float">
<img src="pic.png" title="t" width="200" alt="alt text" />
<div class="figcaption">alt text</div>
</div>
